# anytype-pyclient

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
anytype/: __init__.py  anytype.py  api.py  apimodels.py  block.py  constants.py  list.py  member.py  object.py  property.py  space.py  tag.py  template.py  type.py  utils.py  view.py
anytypePyclient/: __init__.py  anytype.py  api.py  apimodels.py  list.py  listview.py  member.py  object.py  property.py  space.py  tag.py  template.py  type.py  utils.py  view.py
tests/: test_pyclient.py
