[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anytype-pyclient" 
version = "0.0.1"
description = "python client for anytype api."
readme = "README.md"
authors = [{name = "MeiJie", email = "jie.mei1@qq.com"}]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "requests",
    "pydantic"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Source Code" = "https://github.com/a-bite-of-code/anytype-pyclient" 

[tool.setuptools]
packages = ["anytype"]

[tool.black]
line-length = 100
fast = true